# lsegkd

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/lsegkd/: __init__.py  cli.py
src/lsegkd/api/: __init__.py  credentials.py  street_events.py  token_management.py  types.py  utils.py
src/lsegkd/core/: __init__.py  auth.py  http.py  types.py
src/lsegkd/xml/: __init__.py  transcript.py
tests/api/: conftest.py  test_credentials.py  test_street_events.py  test_token_management.py  test_types.py
tests/cli/: test_helpers.py
tests/core/: test_auth.py  test_core_types.py  test_http.py
tests/xml/: test_transcript.py
