[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lsegkd"
dynamic = ["version"]
description = "A Python library for retrieving financial data using the LSEG Knowledge Direct API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "yurukatsu", email = "yuruyuru.kaihatsu@gmail.com" },
]
keywords = ["finance", "lseg", "api", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "typer>=0.15",
]

[project.urls]
Homepage = "https://github.com/yurukatsu/lsegkd"
Repository = "https://github.com/yurukatsu/lsegkd"
Issues = "https://github.com/yurukatsu/lsegkd/issues"

[project.scripts]
lsegkd = "lsegkd.cli:cli"

[dependency-groups]
dev = [
    "ty>=0.0.1a1",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/lsegkd/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lsegkd"]

[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check --fix ."
type-check = "uv run ty check"
test = "uv run pytest"
coverage = "uv run pytest --cov=lsegkd --cov-report=term-missing --cov-report=xml --cov-report=html"
check = ["format", "lint", "type-check", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/lsegkd"]
branch = true
omit = ["src/lsegkd/_version.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.$",
]
